--- a/.github/workflows/main_binance1.yml
+++ b/.github/workflows/main_binance1.yml
@@ -1,3 +1,4 @@
+# Improved: Stable v1.5.1 + Explicit ZIP for Reliable Deploys
 # Docs: https://github.com/Azure/functions-action
 name: Build and deploy .NET project to Azure Function App - binance1
 
@@ -8,40 +9,40 @@ on:
 
 env:
   AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'  # Project root
-  DOTNET_VERSION: '8.0.x'  # Stable for Functions; change back to 9.0.x once tested
+  DOTNET_VERSION: '8.0.x'  # Stable; swap to '9.0.x' later
 
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest  # Keep Linux for Consumption plan
+    runs-on: ubuntu-latest
     
     steps:
       - name: Checkout GitHub Action
         uses: actions/checkout@v4
 
       - name: Setup .NET ${{ env.DOTNET_VERSION }}
-        uses: actions/setup-dotnet@v4  # Updated from v1
+        uses: actions/setup-dotnet@v4  # Latest for better .NET 8 support
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
 
-      - name: Resolve Dependencies & Build
+      - name: Restore & Build (Target .csproj to Fix Warning)
         run: |
           cd '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
-          dotnet restore --configuration Release
-          dotnet build --configuration Release --output ./output --no-restore
+          dotnet restore binazure.csproj --configuration Release  # Restore specific project
+          dotnet build binazure.csproj --configuration Release --output ./output --no-restore  # Build .csproj, not .sln
 
-      - name: Create ZIP Package
+      - name: Create Explicit ZIP Package
         run: |
           cd '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/output'
-          zip -r ../deploy.zip .
+          zip -r ../deploy.zip .  # ZIP the output dir reliably
 
       - name: Deploy to Azure Functions
-        uses: Azure/functions-action@v1.1.2  # Latest v1 patch (fixes some Kudu issues)
+        uses: Azure/functions-action@v1.5.1  # Latest v1—fixes propagation bugs
         id: fa
         with:
           app-name: 'binance1'
           slot-name: 'Production'
-          package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/deploy.zip'  # Explicit ZIP
+          package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/deploy.zip'  # Use our ZIP
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_66835CE9616E47EEBE3726F60AFA1CD8 }}
-          scm-do-build-during-deployment: false  # Explicit: No remote build
-          enable-oryx-build: false  # Disable Oryx (local build only)
-          respect-funcignore: true  # Ignore .funcignore if you have one
+          scm-do-build-during-deployment: false  # Local build only
+          enable-oryx-build: false  # Skip remote build
+          respect-funcignore: true  # If you add .funcignore
