--- a/.github/workflows/main_binance1.yml
+++ b/.github/workflows/main_binance1.yml
@@ -1,5 +1,3 @@
-# Improved: Stable v1.5.1 + Explicit ZIP for Reliable Deploys
-# Docs: https://github.com/Azure/functions-action
 name: Build and deploy .NET project to Azure Function App - binance1
 
 on:
@@ -8,41 +6,45 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'  # Project root
-  DOTNET_VERSION: '8.0.x'  # Stable; swap to '9.0.x' later
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'
+  DOTNET_VERSION: '8.0.x'  # Use 8.0.x (stable); 9.0.x is preview
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Checkout GitHub Action
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup .NET ${{ env.DOTNET_VERSION }}
-        uses: actions/setup-dotnet@v4  # Latest for better .NET 8 support
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
 
-      - name: Restore & Build (Target .csproj to Fix Warning)
+      - name: Restore Dependencies
         run: |
           cd '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
-          dotnet restore binazure.csproj --configuration Release  # Restore specific project
-          dotnet build binazure.csproj --configuration Release --output ./output --no-restore  # Build .csproj, not .sln
+          dotnet restore binazure.csproj
 
-      - name: Create Explicit ZIP Package
+      - name: Build Release to ./output
+        run: |
+          cd '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
+          dotnet build binazure.csproj \
+            --configuration Release \
+            --output ./output \
+            --no-restore
+
+      - name: Create Deploy ZIP
         run: |
           cd '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/output'
-          zip -r ../deploy.zip .  # ZIP the output dir reliably
+          zip -r ../deploy.zip .
 
       - name: Deploy to Azure Functions
-        uses: Azure/functions-action@v1.5.1  # Latest v1—fixes propagation bugs
-        id: fa
+        uses: Azure/functions-action@v1.5.1
         with:
           app-name: 'binance1'
-          slot-name: 'Production'
-          package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/deploy.zip'  # Use our ZIP
+          package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/deploy.zip'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_66835CE9616E47EEBE3726F60AFA1CD8 }}
-          scm-do-build-during-deployment: false  # Local build only
-          enable-oryx-build: false  # Skip remote build
-          respect-funcignore: true  # If you add .funcignore
+          scm-do-build-during-deployment: false
+          enable-oryx-build: false
