--- a/.github/workflows/main_binance1.yml
+++ b/.github/workflows/main_binance1.yml
@@ -1,4 +1,4 @@
-name: Deploy Binance Azure Function
+name: Deploy Binance Trading Azure Function
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
 
 env:
   AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'
-  DOTNET_VERSION: '8.0.x'
+  DOTNET_VERSION: '8.0.x'  # Stable for Functions
   FUNCTION_APP_NAME: 'binance1'
   RESOURCE_GROUP: 'binance1_group'
 
@@ -28,15 +28,15 @@ jobs:
           cd '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
           dotnet restore binazure.csproj
 
-      - name: Build
+      - name: Publish (Generates .azurefunctions Folder)
         run: |
           cd '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
-          dotnet build binazure.csproj --configuration Release --output ./output --no-restore
+          dotnet publish binazure.csproj --configuration Release --output ./output --no-restore
 
-      - name: Create ZIP (Root-Level Files)
+      - name: Create ZIP (Root-Level Structure)
         run: |
           cd '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/output'
-          zip -r ../deploy.zip .   # ← This puts files at root
+          zip -r ../deploy.zip .  # Zips with .azurefunctions at root
 
       - name: Login to Azure
         uses: azure/login@v2
