--- a/.github/workflows/main_binance1.yml
+++ b/.github/workflows/main_binance1.yml
@@ -1,4 +1,4 @@
-name: Deploy Binance Trading Bot (C# + Grok + Binance API)
+name: Deploy Binance Trading Bot (Isolated .NET 8)
 
 on:
   push:
@@ -15,20 +15,20 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup .NET 8
+      - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
 
-      - name: Restore Packages
+      - name: Restore
         run: |
           cd '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
           dotnet restore binazure.csproj
 
-      - name: Publish Function (In-Process C#)
+      - name: Publish (creates .azurefunctions automatically)
         run: |
           cd '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
           dotnet publish binazure.csproj \
@@ -36,22 +36,17 @@ jobs:
             --output ./output \
             --no-restore
 
-      - name: Copy host.json to Output Root
-        run: |
-          cd '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
-          cp host.json ./output/
-
-      - name: Create Deploy ZIP (Root-Level Structure)
+      - name: Create ZIP
         run: |
           cd '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/output'
           zip -r ../deploy.zip .
 
-      - name: Login to Azure
+      - name: Azure Login
         uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Deploy to Azure Function App
+      - name: Deploy
         run: |
           cd '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
           az functionapp deployment source config-zip \
