--- a/binazure.csproj
+++ b/binazure.csproj
@@ -3,6 +3,9 @@
     <TargetFramework>net8.0</TargetFramework>
     <AzureFunctionsVersion>v4</AzureFunctionsVersion>
     <RootNamespace>Company.Function</RootNamespace>
+    <PublishReadyToRun>true</PublishReadyToRun>
+    <PublishSingleFile>true</PublishSingleFile>
+    <PublishTrimmed>false</PublishTrimmed> <!-- Only if no reflection -->
   </PropertyGroup>
 
   <ItemGroup>
