try fast deploy settings u

--- a/binazure.csproj
+++ b/binazure.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <AzureFunctionsVersion>v4</AzureFunctionsVersion>
     <RootNamespace>Company.Function</RootNamespace>
-    <PublishReadyToRun>true</PublishReadyToRun>
+    <PublishTrimmed>false</PublishTrimmed> <!-- Only if no reflection -->
   </PropertyGroup>
 
   <ItemGroup>
