--- a/binazure.csproj
+++ b/binazure.csproj
@@ -3,15 +3,16 @@
     <TargetFramework>net8.0</TargetFramework>
     <AzureFunctionsVersion>v4</AzureFunctionsVersion>
     <RootNamespace>Company.Function</RootNamespace>
-    <PublishTrimmed>false</PublishTrimmed> <!-- Only if no reflection -->
+    <PublishTrimmed>false</PublishTrimmed>
+
+    <!-- THIS LINE MAKES IT ISOLATED -->
+    <AzureFunctionsWorkerMode>Isolated</AzureFunctionsWorkerMode>
   </PropertyGroup>
 
   <ItemGroup>
-    <!-- Isolated worker (required for Flex Consumption) -->
     <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.23.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.17.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Timer" Version="4.1.0" />
-    <!-- Optional helpers -->
     <PackageReference Include="NCrontab" Version="3.3.3" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.21.1" />
   </ItemGroup>
